Bug 118629: Set the caret hint when inserting text so that the caret appears on the same line as inserted text not ending with a newline, and on the line following text ending with a newline. Patch by Uri Bernstein <uriber@gmail.com>, r+sr=roc