editor/libeditor/text/nsTextEditRules.cpp
@@ -399,9 +399,6 @@ nsTextEditRules::WillInsert(nsISelection *aSelection, PRBool *aCancel)
 nsresult
 nsTextEditRules::DidInsert(nsISelection *aSelection, nsresult aResult)
 {
-  // Attach to the frame now before the caret
-  nsCOMPtr<nsISelectionPrivate>selPrivate(do_QueryInterface(aSelection));
-  selPrivate->SetInterlinePosition(PR_FALSE);  
   return NS_OK;
 }
 
@@ -779,7 +776,15 @@ nsTextEditRules::WillInsertText(PRInt32          aAction,
     outString->Assign(tString);
 
     if (curNode) 
+    {
       aSelection->Collapse(curNode, curOffset);
+      
+      // Make the caret attach to the inserted text, unless this text ends with a LF, 
+      // in which case make the caret attach to the next line.
+      PRBool endsWithLF = !tString.IsEmpty() && tString.get()[tString.Length() - 1] == nsCRT::LF;
+      nsCOMPtr<nsISelectionPrivate>selPrivate(do_QueryInterface(aSelection));
+      selPrivate->SetInterlinePosition(endsWithLF);
+    }
   }
   return res;
 }
